--- a/notebook/jq_maps.Rmd
+++ b/notebook/jq_maps.Rmd
@@ -4,100 +4,29 @@ library(jqr)
 ```
 
 
+We will use some prebuilt `jq` queries as XSLT-like stylesheets. These two examples shipping in this package are currently a work in progress:
+
 ```{r}
-eml <- 
-'
-{
-  "id": "https://doi.org/10.data",
-  "type": "Dataset",
-  "coverage": {
-    "temporalCoverage": {
-      "beginDate": "2012-06-01",
-      "endDate": "2013-12-31"
-    }
-  }
-}
-  '
+eml_to_schema <- readr::read_file(system.file("jq/eml_to_schema.jq", package="emld"))
+schema_to_eml <-  readr::read_file(system.file("jq/schema_to_eml.jq", package="emld"))
 
-
-schema <- 
-  '
-{
-  "id": "https://doi.org/10.data",
-  "type": "Dataset",
-  "temporalCoverage":"2012-06-01/2013-12-31"
-}
-  '
 ```
 
 
-
-```{r}
-jq(eml, '. | {id: .id, 
-              type: .type,
-              temporalCoverage: .coverage.temporalCoverage | 
-                                [.beginDate, .endDate] | 
-                                join("/")}')
-```
-
-
-
-```{r}
-jq(schema, '. | 
-            {
-               id: .id, 
-               type: .type,
-               coverage: {
-                 temporalCoverage: {
-                   beginDate : .temporalCoverage | split("/") |.[0],
-                   endDate : .temporalCoverage | split("/") |.[1]
-                 }
-               }
-             }')
-```
+Let's map a more complete EML document into schema.org:
 
 ```{r}
 eml <- readr::read_file("https://raw.githubusercontent.com/cboettig/emld/master/inst/extdata/hf205.json")
-```
-
-
-```{r}
-eml_to_schema <- 
-'. | {id: .id, 
-      type: .type,
-      temporalCoverage: .coverage.temporalCoverage | 
-                        [.beginDate, .endDate] | 
-                        join("/")}'
+jq(eml, eml_to_schema)
 ```
 
 
 
-Shows mapping from `schema:geo` `schema:box`, could be a `schema:circle` or other shape as well
-```{r}
-schema_to_eml <-  '. | 
-            {
-               "@id": .["@id"], 
-               "@type": .["@type"],
-               coverage: {
-                 temporalCoverage: {
-                   beginDate : .temporalCoverage | split("/") |.[0],
-                   endDate : .temporalCoverage | split("/") |.[1]
-                 },
-                 geographicCoverage: .spatialCoverage | {
-                   geographicDescription: .description,
-                   boundingCoordinates: {
-                     westBoundingCoordinate: .geo.box | split(" ") | .[1],
-                     eastBoundingCoordinate: .geo.box | split(" ") | .[3],
-                     northBoundingCoordinate: .geo.box | split(" ") | .[2],
-                     southBoundingCoordinate: .geo.box | split(" ") | .[0]
-                   }
-                 }
-               }
-             }'
-```
+Convert a dataset marked up in <http://schema.org/Dataset> terms into EML
 
 ```{r}
 schema <- readr::read_file("../inst/extdata/schema-org-dataset.json")
+
 jq(schema, schema_to_eml)
 ```
 
