CRAN badge and installation header

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output: github_document
 [![stability-experimental](https://img.shields.io/badge/stability-experimental-orange.svg)](https://github.com/joethorley/stability-badges#experimental)
 [![Travis-CI Build Status](https://travis-ci.org/cboettig/emld.svg?branch=master)](https://travis-ci.org/cboettig/emld) 
 [![Coverage Status](https://img.shields.io/codecov/c/github/cboettig/emld/master.svg)](https://codecov.io/github/cboettig/emld?branch=master)
-
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/emld)](https://cran.r-project.org/package=emld)
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
@@ -27,6 +27,7 @@ The goal of emld is to provide a way to work with EML metadata in the JSON-LD fo
 
 
 This is very much **work in progress** The outline below illustrates things we can do or will be able to do with this package.  The examples below are just a sketch of ideas so far, I hope to replace these with richer examples that will probably be developed more fully as vignettes.  
+
 ## Installation
 
 You can install emld from github with:
