working with eml-2.1.1 mode
i.e. with:

```
options("emld_db" = "eml-2.1.1",
        "emld_schemaLocation" = "eml://ecoinformatics.org/eml-2.1.1/")
```

--- a/README.Rmd
+++ b/README.Rmd
@@ -169,6 +169,12 @@ me <- list(individualName = list(givenName = "Carl", surName = "Boettiger"))
 
 eml <- list(dataset = list(
               title = "dataset title",
+              abstract = list(markdown = 
+"**Look** at this list:
+  - item
+  - item
+`code`
+"),
               contact = me,
               creator = me),
               system = "doi",
